@@ -169,6 +169,7 @@
                 />
         <filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="1" catenateNumbers="1" catenateAll="0" splitOnCaseChange="1"/>
         <filter class="solr.LowerCaseFilterFactory"/>
+        <filter class="solr.DictionaryCompoundWordTokenFilterFactory" dictionary="compoundwords.txt" />
         <filter class="solr.SnowballPorterFilterFactory" language="English" protected="protwords.txt"/>
         <filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
       </analyzer>
@@ -219,7 +220,9 @@
         <filter class="solr.RemoveDuplicatesTokenFilterFactory" /> 
       </analyzer>
     </fieldType>
-   
+
+    <!-- fieldType_textSpell_LANGUAGE -->
+
     <!-- This is an example of using the KeywordTokenizer along
          With various TokenFilterFactories to produce a sortable field
          that does not include some properties of the source text
@@ -350,12 +353,14 @@
 
 	<!-- This field is used to build the spellchecker index -->
    <field name="spell" type="textSpell" indexed="true" stored="true" multiValued="true"/>
-  
+   <!-- field_spell_LANGUAGE -->
   <!-- copyField commands copy one field to another at the time a document
         is added to the index.  It's used either to index the same field differently,
         or to add multiple fields to the same field for easier/faster searching.  -->
    <copyField source="title" dest="spell"/>
+   <!-- copyField_title_LANGUAGE_spell_LANGUAGE -->
    <copyField source="body" dest="spell"/>
+   <!-- copyField_body_LANGUAGE_spell_LANGUAGE -->
 
    <!-- Dynamic field definitions.  If a field name is not found, dynamicFields
         will be used if the name matches any of the patterns.
